kubernetes/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: auth
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      service: auth
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        network/ticket-app-default: "true"
        service: auth
    spec:
      containers:
        - image: foopy7774/auth-ticket-microservice:latest
          name: auth
          ports:
            - containerPort: 4012
          resources: {}
      restartPolicy: Always
status: {}
