kubernetes/event-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: event
  name: event
spec:
  replicas: 1
  selector:
    matchLabels:
      service: event
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        network/ticket-app-default: "true"
        service: event
    spec:
      containers:
        - image: foopy7774/event-ticket-microservice:latest
          name: event
          ports:
            - containerPort: 4014
          resources: {}
      restartPolicy: Always
status: {}
