kubernetes/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      service: gateway
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        network/ticket-app-default: "true"
        service: gateway
    spec:
      containers:
        - image: foopy7774/gateway-ticket:latest
          name: gateway
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
