kubernetes/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: order
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      service: order
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        network/ticket-app-default: "true"
        service: order
    spec:
      containers:
        - image: foopy7774/order-ticket-microservice:latest
          name: order
          ports:
            - containerPort: 4015
          resources: {}
      restartPolicy: Always
status: {}
