kubernetes/search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: search
  name: search
spec:
  replicas: 1
  selector:
    matchLabels:
      service: search
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        network/ticket-app-default: "true"
        service: search
    spec:
      restartPolicy: Always
      containers:
        - image: foopy7774/search-ticket-microservice:latest
          name: search
          ports:
            - containerPort: 4016
          resources: {}
status: {}
