kubernetes/es01-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: es01
  name: es01
spec:
  ports:
    - name: "9200"
      port: 9200
      targetPort: 9200
  selector:
    service: es01
status:
  loadBalancer: {}
