kubernetes/event-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: event
  name: event
spec:
  ports:
    - name: "4014"
      port: 4014
      targetPort: 4014
  selector:
    service: event
status:
  loadBalancer: {}
