kubernetes/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: gateway
  name: gateway
spec:
  type: NodePort
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    service: gateway
status: {}
