kubernetes/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: order
  name: order
spec:
  ports:
    - name: "4015"
      port: 4015
      targetPort: 4015
  selector:
    service: order
status:
  loadBalancer: {}
