kubernetes/search-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: search
  name: search
spec:
  ports:
    - name: "4016"
      port: 4016
      targetPort: 4016
  selector:
    service: search
status:
  loadBalancer: {}
