kubernetes/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: user
  name: user
spec:
  ports:
    - name: "4013"
      port: 4013
      targetPort: 4013
  selector:
    service: user
status:
  loadBalancer: {}
